syntax = "proto2";

package tests.lint;

import "patch/go.proto";

option go_package = "github.com/sudhiaithal/protopatch/tests/lint";

option (go.lint).extensions = true;

message ExtendedMessage {
	extensions 100 to 199;
}

extend ExtendedMessage {
	optional string alpha = 101;
}

extend ExtendedMessage {
	optional string beta = 102;
}

extend ExtendedMessage {
	optional string gamma = 103;
}

extend ExtendedMessage {
	optional string delta = 104;
}
